deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dev
  template:
    metadata:
      labels:
        app: dev
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: dev
        image: 654654442758.dkr.ecr.us-east-1.amazonaws.com/dev-repo:latest
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 250m
            memory: 512Mi
        ports:
        - containerPort: 8000
