service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev
spec:
  type: NodePort
  selector:
    app: dev
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
