ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: dev-alb
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /version
            pathType: Exact
            backend:
              service:
                name: dev
                port:
                  number: 8000
